# katengine

./: .clang-format  .gitignore  CMakeLists.txt  REORGANIZATION.md  vcpkg.json
engine/: CMakeLists.txt
engine/src/kat/: app.cpp  app.hpp  command_recorder.cpp  command_recorder.hpp  core.cpp  core.hpp  engine.cpp  engine.hpp  render_pipeline.cpp  render_pipeline.hpp  stack.hpp  utils.hpp  vku.hpp  window.cpp  window.hpp
engine/src/kat/os/: window.cpp  window.hpp
engine/src/kat/render/: command_recorder.cpp  command_recorder.hpp  render_pass.cpp  render_pass.hpp
engine/src/kat/vulkan_wrapper/: basics.cpp  basics.hpp  swapchain.cpp  swapchain.hpp
game/: CMakeLists.txt
game/src/game/: main.cpp  main.hpp
libs/: CMakeLists.txt
sample/: CMakeLists.txt
sample/src/sample/: main.cpp  main.hpp
